# protobuf/passwordservice.swagger.json
@@ -27,6 +27,16 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protobufChallengeRequestBody"
+            }
+          }
+        ],
         "tags": [
           "Passwordservice"
         ]
@@ -91,6 +101,17 @@
         }
       },
       "title": "basic authentication questions for user"
+    },
+    "protobufChallengeRequestBody": {
+      "type": "object",
+      "properties": {
+        "userQuestionResponse": {
+          "$ref": "#/definitions/protobufAuthQuestion"
+        },
+        "location": {
+          "$ref": "#/definitions/protobufLocation"
+        }
+      }
     },
     "protobufChallengeResponse": {
       "type": "object",
